# patent-agents

./: .gitignore  20260506075628-45-基于Cave折幕视频的处理方法及系统-茅-逐字稿文本-1.txt  AGENTS.md  PROJECT_SUMMARY.md  README.md  agents-page-snapshot.md  agents-page.yaml  deploy.sh  frontend-snapshot.txt  invention_desc.txt  org-page.yaml  patent_answer.js  patent_cave_final.md  patent_cave_specification.md  patent_cave_system_claims.md  patent_output.md  patent_output_cave.md  running-summary.md  start.sh  tmp_page_state.txt  专利申请文件.txt  基于边缘计算的智能植物养护系统.txt  我发明了一种基于边缘计算的智能植物养护系统.txt  权要撰写提示词.docx
backend/: .env.example  .env.production  alembic.ini  demo_data.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4f514a77018f_init.py
backend/data/: .secret_key
backend/examples/: demo_agent_system.py  demo_full_workflow.py
backend/hermes_agents/brainstorm_partner/: config.yaml
backend/hermes_agents/ceo/: SOUL.md  config.yaml
backend/hermes_agents/quality_reviewer/: SOUL.md
backend/hermes_home/: auth.json
backend/hermes_home/sessions/: session_concise_test.json  session_conv_0806331b-e1e2-482c-b494-c6bc966385c8.json  session_conv_34437f0e-159c-4038-afe5-ee2b180d4a71.json  session_conv_7a503111-a85a-48e9-95c6-e7edf7eba194.json  session_conv_a56c87b9-f621-4f72-b6c7-f50b56564a34.json  session_conv_e7b99d06-e29e-4568-95ca-586c43070a72.json  session_diag1.json  session_diag2.json  session_test1.json  session_test2.json  session_tool_test_1.json
backend/src/: AGENTS.md  __init__.py
backend/src/agents/: AGENTS.md  __init__.py  agent_config.py  base.py  ceo.py  hermes_agent_service.py  patent_writer.py  quality_reviewer.py  requirement_analyst.py  retrieval_analyst.py
backend/src/api/: .agent_configs.json  AGENTS.md  deps.py  routes.py  schemas.py
backend/src/core/: AGENTS.md  __init__.py  cache.py  config.py  container.py  events.py  exceptions.py  llm_client.py  logging.py  middleware.py  override_store.py  scheduler.py  storage.py  (+5 more)
backend/tests/: conftest.py  test_agent_config_resolution.py  test_api_agents.py  test_api_chat.py  test_api_error_handling.py  test_api_events.py  test_api_health.py  test_api_system.py  test_api_tasks.py  test_api_workflows.py  test_config_resolve.py  test_document_gen.py  test_feature_extraction.py  test_generated_format.py  test_linked_workflow_conversation.py  test_override_store_llm.py  test_patent_drawing_generator.py  test_per_agent_config_integration.py  test_secret_cipher.py  test_web_access_tools.py  test_workflow_agent_work_log.py  test_workflow_artifacts_api.py  test_workflow_engine_patent_draft.py  test_workflow_log_event.py  test_workflow_quality_gate.py  test_workflow_resume_or_decision.py
(+513 files in other folders)
